# jeeni

./: .gitignore  README_FIX.md  README_UPDATES.md  docker-compose.yml  fix_images.bat  readme.md
backend/: .env.example  Dockerfile  add_carousel.py  add_test_section.py  alembic.ini  check_cart.py  check_db.py  check_db_connection.py  create_tables.py  debug_sections.py  force_create_table.py  gunicorn_conf.py  list_users.py  package-lock.json  package.json  promote_user.py  pyproject.toml  pytest.ini  query_sections.py  requirements.txt  scrape_jeeni.py  seed_home.py  seed_jeeni_products.py  seed_pages.py  seed_sqlalchemy.py  seed_sync.py  seed_test.py  test_asyncpg.py  test_db.py  test_fs.py  test_output.txt  update_images.js  update_images.py
backend/alembic/: env.py
backend/alembic/versions/: 132e33911b24_add_general_tables.py  331705f6780c_update_product_foreign_key_constraints.py  37a37c57b76f_add_product_and_category_tables.py  8456e03f0fcb_add_wishlist_table.py  88b054932b8c_initial_migration_user_model.py  a1b2c3d4e5f6_add_product_review_table.py  b4159693afdf_add_product_tables_revision.py  d3b43234b0f2_add_cart_and_order_tables.py  e71fc5d8ba3c_add_content_tables.py  f1a2b3c4d5e6_rename_shipped_to_shipping.py
backend/app/: main.py
backend/app/core/: cache.py  config.py  logging.py  ratelimit.py  security.py
backend/app/db/: session.py
backend/app/models/: cart.py  content.py  general.py  order.py  product.py  review.py  user.py  wishlist.py
backend/app/repositories/: content_repository.py  (+4 more)
backend/tests/: conftest.py  test_health.py
(+169 files in other folders)
