[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "fastapi>=0.109.0",
    "httpx>=0.26.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.25",
    "uvicorn[standard]>=0.27.0",
]
